<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BackgroundOrange">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_marginStart="66dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/img_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/chart_button"
            android:src="@drawable/ic_baseline_shopping_cart_24" />

        <ImageView
            android:id="@+id/img_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_centerVertical="true"
            android:contentDescription="@string/about_button"/>
    </RelativeLayout>

</RelativeLayout>