<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cv_bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.BottomSheetFragment"
    app:cardCornerRadius="16dp"
    android:paddingBottom="50dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close"
            tools:src="@drawable/patrobas_equip_low_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/img_item"
            app:layout_constraintTop_toBottomOf="@+id/btn_close"
            tools:text="Rp 270000" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_type_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/img_item"
            app:layout_constraintTop_toBottomOf="@+id/text_price"
            tools:text="43" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/size"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/img_item"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/amount"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/chips_types"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_view_amount">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_min"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_horizontal_rule_24"
                android:drawableStart="@drawable/ic_baseline_horizontal_rule_24"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_amount"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                tools:text="2"
                android:textAlignment="center"
                android:textSize="24sp"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_add"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:drawableStart="@drawable/ic_baseline_horizontal_rule_24"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginTop="32dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_amount"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
